# gst_inf_playground

./: .gitignore  README.md  meson.build  meson_options.txt
temp/: app.cpp  common.hpp  common_tracker.cpp  common_tracker.hpp  cuda_utils.h  gstinfpintel.cpp  gstinfpintel.h  meson.build  meson.build.txt  yololayerv5.cpp  yololayerv5.h  yolov5_base.h  yolov5_phrd.cpp  yolov5_phrd.h  yolov5_x.cpp  yolov5_x.h
tensorrt/: common.cpp  gstinfpintel.cpp  gstinfpintel.h  inf_pintel_backend.h  inference_backend.h  meson.build  trt.api.cpp  yolo.trt.api.base.h  yolov5.trt.api.cpp  yolov5.trt.api.h  yolov5_x.cpp  yolov5_x.h
